# python-template

./: .gitignore  .pre-commit-config.yaml  CONSTITUTION.md  Dockerfile  Makefile  justfile  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-merge.yml  bump-version.yml  ci.yml  container.yml  dependabot.yml  docker.yml  ghcr.yml  lint.yml  poetry.yml  publish.yaml  publish.yml  python.yaml  python.yml  test.yml
src/pythontemplate/: __init__.py  cli.py
tests/: test.py  test_cli.py  test_hello.py  test_print.py
